force-app/main/default/objects/Affiliate_Custom_Settings__c/Affiliate_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Affiliate Custom Settings</label>
</CustomObject>