force-app/main/default/objects/Affiliate_Custom_Settings__c/fields/Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Code__c</fullName>
    <label>Market Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>