force-app/main/default/objects/Affiliate_Custom_Settings__c/fields/Milk_Code_Restriction_Period_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Milk_Code_Restriction_Period_in_Months__c</fullName>
    <label>Milk Code Restriction Period (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>