force-app/main/default/objects/Affiliate_Custom_Settings__c/fields/Reward_Points_Valid_Period_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points_Valid_Period_in_Months__c</fullName>
    <label>Reward Points Valid Period (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>